--- a/webdatavizeprojgrupo/web-data-viz/.env.dev
+++ b/webdatavizeprojgrupo/web-data-viz/.env.dev
@@ -12,3 +12,9 @@ APP_PORT=3333
 APP_HOST=localhost
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
+
+DB_HOST=localhost
+DB_DATABASE='WineTemp'
+DB_USER='root'
+DB_PASSWORD='280406efd'
+DB_PORT=3306
