--- a/webdatavizeprojgrupo/web-data-viz/.env.dev
+++ b/webdatavizeprojgrupo/web-data-viz/.env.dev
@@ -3,8 +3,8 @@ AMBIENTE_PROCESSO=desenvolvimento
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
 DB_DATABASE='WineTemp'
-DB_USER='aluno'
-DB_PASSWORD='sptech'
+DB_USER='root'
+DB_PASSWORD='Mm010616'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
@@ -12,9 +12,3 @@ APP_PORT=3333
 APP_HOST=localhost
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
-
-DB_HOST=localhost
-DB_DATABASE='WineTemp'
-DB_USER='root'
-DB_PASSWORD='280406efd'
-DB_PORT=3306
