--- a/webdatavizeprojgrupo/web-data-viz/.env.dev
+++ b/webdatavizeprojgrupo/web-data-viz/.env.dev
@@ -3,7 +3,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
 DB_DATABASE='WineTemp'
-DB_USER='aluno'
+DB_USER='Gustavo'
 DB_PASSWORD='sptech'
 DB_PORT=3306
 
@@ -13,8 +13,8 @@ APP_HOST=localhost
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
 
-DB_HOST=localhost
-DB_DATABASE='WineTemp'
-DB_USER='root'
-DB_PASSWORD='280406efd'
-DB_PORT=3306
+# DB_HOST=localhost
+# DB_DATABASE='WineTemp'
+# DB_USER='root'
+# DB_PASSWORD='280406efd'
+# DB_PORT=3306
