--- a/webdatavizeprojgrupo/web-data-viz/.env.dev
+++ b/webdatavizeprojgrupo/web-data-viz/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='WineTemp'
 DB_USER='root'
-DB_PASSWORD=''
+DB_PASSWORD='Mm010616'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
